test/SemanticAnalysis/Defaults/RequestDefaultImplicitCopyWithNonCopyableMembers.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// Not copyable.
}

class CopyableClass(TestClass member) {
	// CHECK: .loci:10:2: error: cannot generate implicit copy since members don't support it
	implicitcopy = default;
}

// CHECK: 1 error generated.
